# rust-gpu-chimera

./: Cargo.toml  README.md  build.rs  check-vulkan.sh  deploy-cuda.sh  fix-vulkan.sh  test-all.sh
.cargo/: config.toml
.github/workflows/: native-gpu.yml  swiftshader.yml  vulkan.yml
kernel/: Cargo.toml
kernel/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: error.rs  lib.rs  main.rs
src/runners/: ash.rs  cpu.rs  cuda.rs  mod.rs
